vote service and tests refactoring